# 3DS-Strike

./: .gitignore  57.at3  CMakeLists.txt  README.TXT  README.md  README_RELEASE.txt  build.sh
include/: common.h  fl.h  structs.h  types.h
include/AcrSDK/common/: memfound.h  mlPAD.h  pad.h  plapx.h  plbmp.h  plcommon.h  plpic.h  pltim2.h
include/Game/: DC_Ghost.h  EFFECT.h  GD3rd.h  MTRANS.h  PLCNT.h  PLPAT09.h  PulPul.h  SE.h  SYS_sub.h  Se_Data.h  Sound3rd.h  SysDir.h  WORK_SYS.h  color3rd.h  count.h  main.h  sc_data.h  sc_sub.h  select_timer.h  texcash.h  workuser.h
include/Game/debug/: Debug.h  debug_config.h
include/Game/sound/: se.h  se_data.h  sound3rd.h  sound_ids.h
include/ctr/: ctr_game_renderer.h  gu_draw.h  port_compat.h
include/port/sound/: emlShim.h  spu.h
include/pspshim/: psppower.h  pspshim.h
include/sdk/: libgraph.h
include/sf33rd/AcrSDK/MiddleWare/PS2/CapSndEng/: cse.h  eflSpuMap.h  emlMemMap.h  emlRefPhd.h  emlTSB.h
src/AcrSDK/common/: memfound.c  memmgr.c  mlPAD.c  plapx.c  plbmp.c  plpic.c  pltim2.c  prilay.c
src/Compress/: zlibApp.c
src/Compress/Lz77/: Lz77Dec.c
src/Compress/zlib/: adler32.c  infblock.c  infcodes.c  inffast.c  inflate.c  inftrees.c  infutil.c  zutil.c
src/Game/: ACTIVE00.c  AcrUtil.c  BBBSCOM.c  BBBSCOM2.c  CALDIR.c  CHARID.c  CHARSET.c  CMD_MAIN.c  Ck_Pass.c  Com_Pl.c  Com_Sub.c  Continue.c  DC_Ghost.c  DEMO00.c  DEMO01.c  DEMO02.c  Demo_Dat.c  EFF00.c  EFF01.c  EFF02.c  EFF03.c  EFF04.c  EFF07.c  EFF09.c  EFF10.c  EFF11.c  EFF13.c  EFF15.c  EFF16.c  EFF17.c  EFF18.c  EFF19.c  EFF21.c  EFF22.c  EFF23.c  EFF24.c  EFF25.c  EFF26.c  EFF27.c  EFF28.c  (+375 more)
src/Game/Message3rd/C_USA/: PL00End_usa.c  PL00Tlk_usa.c  PL00Win_usa.c  PL01End_usa.c  PL01Tlk_usa.c  PL01Win_usa.c  PL02End_usa.c  PL02Tlk_usa.c  PL02Win_usa.c  PL03End_usa.c  PL03Tlk_usa.c  PL03Win_usa.c  PL04End_usa.c  PL04Tlk_usa.c  PL04Win_usa.c  PL05End_usa.c  PL05Tlk_usa.c  PL05Win_usa.c  PL06End_usa.c  PL06Tlk_usa.c  PL06Win_usa.c  PL07End_usa.c  PL07Tlk_usa.c  PL07Win_usa.c  PL08End_usa.c  PL08Tlk_usa.c  PL08Win_usa.c  PL09End_usa.c  PL09Tlk_usa.c  PL09Win_usa.c  PL10End_usa.c  PL10Tlk_usa.c  PL10Win_usa.c  PL11End_usa.c  PL11Tlk_usa.c  PL11Win_usa.c  PL12End_usa.c  PL12Tlk_usa.c  PL12Win_usa.c  PL13End_usa.c  (+22 more)
src/Game/debug/: Deb_Data.c  Debug.c  Nakai.c  OBJTEST.c  OTESTDAT.c  debug_config.c
src/Game/sound/: se.c  se_data.c  sound3rd.c  sound_lookup.c
src/common/: audio.c  audio.h  graphics.c  graphics.h  math.c  math.h  sprites.c  sprites.h
src/ctr/: audio.c  ctr_game_renderer.c  gu_draw.c  main.c  pad.c  pspshim.c  render2d.shbin  render2d.v.pica  render2d_shbin.h  save.c
src/port/: char_data.c  char_data.h
src/port/sound/: emlShim.c  spu.c
src/sf33rd/AcrSDK/MiddleWare/PS2/CapSndEng/: eflSpuMap.c  emlMemMap.c  emlRefPhd.c  emlTSB.c
